<resources>
  <string name="app_name">Masjid</string>
  <string name="contact">086 6038982</string>
  <string name="address_label">Address</string>
  <string name="address">17 Fort Field\n Killerisk\n Tralee\n Co. Kerry  V92 N6K6\n Ireland</string>
  <string name="description">Daily prayer service for the Tralee Muslim Community.</string>
  <string name="hours_of_ops">Mon-Sun: 4am - 10pm</string>
  <string name="base_activity_banner_desc">Masjid Banner</string>
</resources>
